--- a/RamlSDK2/RamlExampleV2/RamlExampleV2/Base.lproj/Main.storyboard
+++ b/RamlSDK2/RamlExampleV2/RamlExampleV2/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="pageLabel" destination="Ols-bz-yIj" id="6U7-wM-taj"/>
